semantics: deleteg classes

--- a/index.html
+++ b/index.html
@@ -13,27 +13,29 @@
         <div class="face_mark"></div>
         <div class="share_links">
           <h2 class="sh_links_text">Share this</h2>
-          <img src="images/Share_links.png" alt="share_links" class="share_logs_img" >
+          <nav>
+            <img src="images/Share_links.png" alt="share_links">
+          </nav>
         </div>
         <section>
             <h1>Lorem ipsum dolor sit amet</h1>
             <article>
               <img src="images/Cup CSS.jpg" alt="cup awesome" class='cup_image' height="111px" width="207px">
-              <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel velit in nisl accumsan blandit. Mauris sed consequat tortor. Etiam enim odio, elementum sed risus id, faucibus lobortis felis. Donec maximus dolor in egestas fringilla. Pellentesque a neque quis eros lobortis mollis sit amet ut dolor. Aenean nec quam dictum, pharetra nulla et, ornare eros.
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel velit in nisl accumsan blandit. Mauris sed consequat tortor. Etiam enim odio, elementum sed risus id, faucibus lobortis felis. Donec maximus dolor in egestas fringilla. Pellentesque a neque quis eros lobortis mollis sit amet ut dolor. Aenean nec quam dictum, pharetra nulla et, ornare eros.
               </p>
-              <p class="p2">Quisque accumsan felis vel dolor placerat, sed imperdiet dolor tempor. Morbi et molestie dolor, ac consectetur ipsum. Nullam varius risus in purus bibendum, in auctor odio eleifend. Proin cursus leo quis ex commodo, non placerat diam finibus.
+              <p>Quisque accumsan felis vel dolor placerat, sed imperdiet dolor tempor. Morbi et molestie dolor, ac consectetur ipsum. Nullam varius risus in purus bibendum, in auctor odio eleifend. Proin cursus leo quis ex commodo, non placerat diam finibus.
               </p>
               <img src="images/CSS to HTML.jpg" alt="YOU ARE THE CSS TO MY HTML" class="heart_image" height="140px" width="140px">
-              <p class="p3">Aliquam tempus gravida fermentum. Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor. Aliquam tempus gravida fermentum. Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor. Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor.
+              <p>Aliquam tempus gravida fermentum. Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor. Aliquam tempus gravida fermentum. Quisque vel sodales risus. Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor. Sed ultricies justo sem, in rutrum neque interdum eget. Donec nec metus nunc. Nullam tempus convallis porttitor.
               </p>
            </article>
           <ul>
             <h2>Nulla verra tortorefficitur vestibulum tristique</h2>
             <li>
-              <img  src="images/ninja.jpg" class="foot_image" height="89px" width="194px">
-              <img  src="images/right top.jpg" class="foot_image"  height="89px" width="194px">
-              <img  src="images/right down.jpg" class="foot_image"  height="89px" width="194px">
-              <img  src="images/left down.jpg" class="foot_image"  height="89px" width="194px">
+              <img  src="images/ninja.jpg"  height="89px" width="194px">
+              <img  src="images/right top.jpg" height="89px" width="194px">
+              <img  src="images/right down.jpg" height="89px" width="194px">
+              <img  src="images/left down.jpg" height="89px" width="194px">
             </li>
           </ul>
         </section>
